kubernetes/unidocs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unidocs
  labels:
    app: unidocs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: unidocs
  template:
    metadata:
      labels:
        app: unidocs
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: unidocs
          image: ghcr.io/pabpereza/unidocs:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
