kubernetes/unidocs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unidocs
spec:
  selector:
    app: unidocs
  ports:
    - port: 80
      targetPort: 80
